# Otus_cpp5_NO_QT

./: CMakeLists.txt  Colores.cpp  Colores.h  ConsoleCanves.cpp  ConsoleCanves.h  ICanves.cpp  ICanves.h  Observations.cpp  Observations.h  PrimController.cpp  PrimController.h  PrimModel.cpp  PrimModel.h  PrimView.cpp  PrimView.h  Primitives.cpp  Primitives.h  PushButtonNoQt.cpp  PushButtonNoQt.h  README.md  Toolses.cpp  Toolses.h  main.cpp
.github/workflows/: c-cpp.yml
